WIP fix gap

--- a/assets/section-main-blog.css
+++ b/assets/section-main-blog.css
@@ -12,8 +12,8 @@
 @media screen and (min-width: 750px) {
   .blog-articles {
     grid-template-columns: repeat(3, 1fr);
-    column-gap: var(--grid-desktop-horizontal-spacing);
-    row-gap: var(--grid-desktop-vertical-spacing);
+    column-gap: calc(var(--grid-desktop-horizontal-spacing) + 4rem);
+    row-gap: calc(var(--grid-desktop-vertical-spacing) + 4rem);
   }
 
   .blog-articles--collage > *:nth-child(4n + 1),
